--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -5,7 +5,7 @@ date: 2011-06-08 22:00:00
 category: tech
 published: true
 ---
-What Apple presented on monday really is huge. I followed the [keynote](http://events.apple.com.edgesuite.net/11piubpwiqubf06/event/) via the TechCrunch live blog, but am sure I missed a ton of good stuff and already forgot another ton. iMessages, new notification system, iCloud and the deeeeep Twitter integration<sup>1</sup> alone sound so awesome I can't wait for iOS 5 to ship, nay: to be delivered over the air onto my iDevices.
+What Apple presented on monday is really huge. I followed the [keynote](http://events.apple.com.edgesuite.net/11piubpwiqubf06/event/) via the TechCrunch live blog, but am sure I missed a ton of good stuff and already forgot another ton. iMessages, new notification system, iCloud and the deeeeep Twitter integration<sup>1</sup> alone sound so awesome I can't wait for iOS 5 to ship, nay: to be delivered over the air onto my iDevices.
 
 ### iMessage ### 
 iMessage enables every iDevice's SMS app to send messages to another iDevice via wifi or 3G. Even more: You can't even send an SMS to another person's iPhone over your carrier's network if you wanted to. As [Marco Arment](http://marco.org) points out in the [latest Build & Analyze](http://5by5.tv/buildanalyze/28): 
