--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -23,7 +23,7 @@ It's funny, just as I [wrote about](http://blog.timmschoof.com/2011/06/05/my-iOS
 But the all-your-music-sucking-in 'iTunes match', that's really huge. Just as backup over the air.  
 The new reminder's location function, luckily, is as awesome as it's creepy. I wonder how you can manage your mistress's  and wife's address - via address book or maybe via foursquare, so that everyone...? No, I'm kidding, I see 'Wunderlist' going into the trash as my ToDo app.  
 
-The only thing that really made me sad was to see how Steve Job's condition obviously gets worse. He really appeared much weaker than during the last keynote. I sincerely hope the iPhone 5<sup>2</sup> doesn't get developed under the same circumstances regarding Jobs's health condition as the Knight 2000 was to Wilton Knight's.
+The only thing that really made me sad was to see how Steve Jobs's condition obviously gets worse. He appeared much weaker than during the last keynote. I sincerely hope the iPhone 5<sup>2</sup> doesn't get developed under the same circumstances regarding Jobs's health condition as the Knight 2000 was to Wilton Knight's.
 
 ---
 1. It's really deep, I would say it's treated just like eMail. Way to go, twitter! Sadly, this will increase twitter's ability to play out third party clients. But we'll see, great development nonetheless, I think.
