--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -29,4 +29,4 @@ The only thing that really made me sad was to see how Steve Jobs's condition obv
 ---
 1. It's really deep, I would say it's treated just like eMail. Way to go, twitter! Sadly, this will increase twitter's ability to play out third party clients. But we'll see, great development nonetheless, I think.
 2. or 4S  
-* This paragraph is an update
+"*" This paragraph is an update
