--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -22,11 +22,13 @@ Well, the old ones sucked. The new ones look great, usability-wise. I can enable
 It's funny, just as I [wrote about](http://blog.timmschoof.com/2011/06/05/my-iOS-workflow/) how independent my iDevices are from the iTunes that's buried deep in the Windows partition on my desktop machine, Apple addresses that. Melikey. The contact and calendar stuff probably works like Google's services and like Mobile Me should have. The free mail address is nice, though. Note to myself: got to [get my hands on iOS 5 Beta](http://www.wired.com/gadgetlab/2011/06/ios5-upgrade-hack/) to save my favorite address/iCloud username.  
 But the all-your-music-sucking-in 'iTunes match', that's really huge. Just as backup and sync over the air.  
 The new reminder's location function, luckily, is as awesome as it's creepy. I wonder how you can manage your mistress's  and wife's address - via address book or maybe via foursquare, so that everyone...? No, I'm kidding, I see 'Wunderlist' going into the trash as my ToDo app.  
-<sup>*</sup>As [John Gruber](http://daringfireball.net/) points out in the [latest Talk Show](http://5by5.tv/talkshow/46), maybe iCloud is the biggest thing from a long-term perspective. The feature Apple cut the cable with and made all the iDevices more independent and seamlessly integrating with your workflow, as long as you're using a Mac.
 
 The only thing that really made me sad was to see how Steve Jobs's condition obviously gets worse. He appeared much weaker than during the last keynote. I sincerely hope the iPhone 5<sup>2</sup> doesn't get developed under the same circumstances regarding Jobs's health condition as the Knight 2000 was to Wilton Knight's.
 
+### \*<sup>3</sup> ###
+As [John Gruber](http://daringfireball.net/) points out in the [latest Talk Show](http://5by5.tv/talkshow/46), maybe iCloud is the biggest thing from a long-term perspective. The feature Apple cut the cable with and made all the iDevices more independent and seamlessly integrating with your workflow, as long as you're using a Mac.
+
 ---
 1. It's really deep, I would say it's treated just like eMail. Way to go, twitter! Sadly, this will increase twitter's ability to play out third party clients. But we'll see, great development nonetheless, I think.
-2. or 4S  
-\* This paragraph is an update
+2. or 4S
+3. This paragraph is an update
