--- a/_posts/2011-06-08-iOS-5.md
+++ b/_posts/2011-06-08-iOS-5.md
@@ -25,8 +25,7 @@ The new reminder's location function, luckily, is as awesome as it's creepy. I w
 
 The only thing that really made me sad was to see how Steve Jobs's condition obviously gets worse. He appeared much weaker than during the last keynote. I sincerely hope the iPhone 5<sup>2</sup> doesn't get developed under the same circumstances regarding Jobs's health condition as the Knight 2000 was to Wilton Knight's.
 
-### \*<sup>3</sup> ###
-As [John Gruber](http://daringfireball.net/) points out in the [latest Talk Show](http://5by5.tv/talkshow/46), maybe iCloud is the biggest thing from a long-term perspective. The feature Apple cut the cable with and made all the iDevices more independent and seamlessly integrating with your workflow, as long as you're using a Mac.
+\*<sup>3</sup>As [John Gruber](http://daringfireball.net/) points out in the [latest Talk Show](http://5by5.tv/talkshow/46), maybe iCloud is the biggest thing in the long run. The feature Apple cut the cable with and made all the iDevices more independent and seamlessly integrating with your workflow, as long as you're using a Mac.
 
 ---
 1. It's really deep, I would say it's treated just like eMail. Way to go, twitter! Sadly, this will increase twitter's ability to play out third party clients. But we'll see, great development nonetheless, I think.
