--- a/_posts/2011-06-12-Quotes-1.md
+++ b/_posts/2011-06-12-Quotes-1.md
@@ -19,7 +19,7 @@ Marco Arment and Dan Benjamin talk about coffee, especially the chemex coffee br
 
 3.  Geekism - [Build & Analyze #11, 05:30](http://5by5.tv/buildanalyze/11)  
 Marco:
-> I'm a true geek. I like it when people are passionate and particular about things they really enjoy. So listening to other geeks talk about things in a geeky manner is still interestint to me, even if the topics are not.
+> I'm a true geek. I like it when people are passionate and particular about things they really enjoy. So listening to other geeks talk about things in a geeky manner is still interesting to me, even if the topics are not.
 
 	This reminds me of a sentence in the article [Success, and farming vs mining](http://blog.wilshipley.com/2011/04/success-and-farming-vs-mining.html).
 > The doctors and DNA-researchers and dancers and chocolate-makers and oceanographers and cosmologists and investors all have one thing in common: they are total nerds. They work on the thing they love literally all the time. You can't talk to them without talking about their passion.
@@ -28,7 +28,7 @@ Marco:
 
 4. Being a designer - [The Pipeline #43, 38:30](http://5by5.tv/pipeline/43)  
 [Mike Monteiro](https://twitter.com/#!/mike_ftw):
-> Add you can see on Twitter that there's a ton of bitching about: 'No one respects me as a designer. But I'm also not willing to put in the effort to get respected. I want to sit here at my desk in front of my iMac screen and my very expensive headphones on, listening to house music, cranking out beautifully layered Photoshop files that have nothing to do with my client's business goals.'
+> And you can see on Twitter that there's a ton of bitching about: 'No one respects me as a designer. But I'm also not willing to put in the effort to get respected. I want to sit here at my desk in front of my iMac screen and my very expensive headphones on, listening to house music, cranking out beautifully layered Photoshop files that have nothing to do with my client's business goals.'
 
 5. Ferrari - [Enough #18, 06:00](http://minimalmac.com/enough/#ep18)  
 [Patrick Rhone](https://twitter.com/#!/patrickrhone):
