--- a/_posts/2011-07-02-Google+.md
+++ b/_posts/2011-07-02-Google+.md
@@ -11,3 +11,6 @@ That's very basic, but it shows that Google+ wants you in control and wants to m
 This is certainly a very different approach than Facebook's, where privacy settings are changed while you're looking at them. You get the feeling, and I believe that Facebook wants to trick you into making everything as public as their current 'features' allow it to be.
 
 The fresh design that came with Google+ is very welcome, too. Unlike Diaspora, Google+ isn't [DOA](http://en.wikipedia.org/wiki/Dead_on_arrival) and Germany's Twitter users are already all over it. The average Facebook user may not be that interested in Google+ at this point, but that's not necessarily a bad thing. I'm really looking forward to Google+'s growth and adaption by some of my friends who are not that much into tech. 
+
+Oh, and you should check out Marco's [take on it](http://www.marco.org/2011/06/29/google-plus). If you speak German, you can also read Marcel's [post](http://uarrr.org/2011/07/01/warum-google-das-bessere-social-network-ist/). He always tries to hide good thoughts behind the vocabulary of a 6-year-old, don't be surprised.  
+Also in German, Martin of **netzwertig.com** is [more sceptical](http://netzwertig.com/2011/06/30/google-technisch-beeindruckend-aber-komplex/) about it, with good reasons. Johnny of spreeblick**.com** has [listed some nice features](http://www.spreeblick.com/2011/06/30/erste-eindrucke-und-tipps-google/) I didn't know about. Apparently, Google+ offers Markdown-like Text editing using '*', '_' and '-'
