--- a/_posts/2011-07-03-quotes-2.md
+++ b/_posts/2011-07-03-quotes-2.md
@@ -5,7 +5,7 @@ date: 2011-07-03 10:00:00
 category: quotes
 published: true
 ---
-Third party - [Build & Analyze #31, 1:09:30](http://5by5.tv/buildanalyze/31)
+Third party market place - [Build & Analyze #31, 1:09:30](http://5by5.tv/buildanalyze/31)  
 Marco:
 > You need the diversity and size of a third-party market place to both solve less common needs and provide variety in the common needs.
 
