--- a/_posts/2011-07-25-quotes-3.md
+++ b/_posts/2011-07-25-quotes-3.md
@@ -7,7 +7,7 @@ published: true
 ---
 [Hypercritical #25, 30:20](http://5by5.tv/hypercritical/25)  
 Siracusa:
-> You'd be shocked at the number of people who do not know how to go to someone's twitter page. Nobody knows how to type twitter.com/username except for people listening to this show. I guarantee you they just go to twitter and search or something.
+> You'd be shocked at the number of people who do not know how to go to someone's twitter page. Nobody knows how to type 'twitter.com/username' except for people listening to this show. I guarantee you they just go to twitter and search or something.
 
 He sure is right about that. It's an example of how, for us geeks, unbelievably cumbersome most people interact with technology. Like typing 'www.twitter.com' in the google search mask, google.com being your welcome page, ignoring the separate firefox google search bar.<sup>1</sup> Or using the Google Image search to find your new (sports car) wallpaper. Good luck with that.
 
@@ -15,7 +15,7 @@ He sure is right about that. It's an example of how, for us geeks, unbelievably 
 Marco:
 > You know how on American Cheese they can't actually call it cheese [...] so they have to call it 'pasteurized processed cheese food'. I think the kind of coffee that comes from the vendor with the green mermaid logo should be called something similar [...] I'm going with 'coffee inspired beverage product'.
 
-I don't know who wrote it, but I recently read a piece in which the author said he actually liked that people call the short Italian coffee shots 'Expresso', cause in most places the shot you get doesn't deserve the name 'Espresso'. Marco's idea is spirited likely: Preserving a name for the things it actually describes, I like that. A little arrogant and nitpicky, but correct and sophisticated. Also, it's a great way to make fun of people who just don't get it without even having them noticing.
+I can't recall by whom it was, but I recently read a piece in which the author said he actually liked that people call the short Italian coffee shots 'Expresso', cause in most places the shot you get doesn't deserve the name 'Espresso'. Marco's idea is likely spirited: Preserving a name for the things it actually describes, not what most people 'just call it. I like that. A little arrogant and nitpicky, but correct and sophisticated. Also, it's a great way to make fun of people who just don't get it without even having them noticing.
 
 ---
 1. I, of course, use Chrome. I just sketched what I believe is the average user.
