--- a/_posts/2011-08-26-Rambo-III.md
+++ b/_posts/2011-08-26-Rambo-III.md
@@ -5,7 +5,7 @@ date: 2011-08-26 13:13:00
 category: movies and television
 published: true
 ---
-<div align="center"><img src="./images/rambo_III.png" align="middle" alt="screenshot"></div>  
+<div align="center"><img src="http://blog.timmschoof.com/images/rambo_III.png" align="middle" alt="screenshot"></div>  
 Damn, I wanted this to be a short, funny post, mocking Rambo's choice of allies. Then, I recognized that [Mujahideen](http://en.wikipedia.org/wiki/Mujahideen) and [Taliban](http://en.wikipedia.org/wiki/Taliban) aren't the same at all, quite the contrary.
 
 Looks like [Rambo III](http://en.wikipedia.org/wiki/Rambo_III) has educational value after all. If you didn't know the first thing about Afghanistan, like me (good thing history was my intensive course in upper school).
