--- a/_posts/2011-08-31-3blatt.md
+++ b/_posts/2011-08-31-3blatt.md
@@ -5,4 +5,4 @@ date: 2011-08-31 15:11:00
 category: tech
 published: true
 ---
-I have **no** idea what to do with [<3blatt.de](http://kleinerdreiblatt.de/), but collecting domain names is something I could get used to.
+I have **no** idea what to do with [&lt;3blatt.de](http://kleinerdreiblatt.de/), but collecting domain names is something I could get used to.
