--- a/_posts/2011-10-05-Nine-RSS.md
+++ b/_posts/2011-10-05-Nine-RSS.md
@@ -6,6 +6,6 @@ category: blog
 ---
 Hello there!
 
-Today, I fixed the [RSS Feed](http://feeds.feedburner.com/timmschoof), so you can subscribe again without messing up your RSS reader. I'm sorry for the inconvenience, a nasty (and, in my part, dumb) syntax error tore it apart. I also changed the blog post's permalinks  and tweaked the metadata below the post titles a little. Now the date doesn't mess up the nice *url.com/post_title* scheme anymore. 
+Today, I fixed the [RSS Feed](http://feeds.feedburner.com/timmschoof), so you can subscribe again without messing up your RSS reader. I'm sorry for the inconvenience, a nasty (and, on my part: dumb) syntax error tore it apart. I also changed the blog post's permalinks  and tweaked the metadata below the post titles a little. Now the date doesn't mess up the nice *url.com/post_title* scheme anymore. 
 
 There's more to come (content-wise too, for a change), so stay tuned. 
