--- a/_posts/2011-10-05-Nine-RSS.md
+++ b/_posts/2011-10-05-Nine-RSS.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Nine - RSS and Stuff
+title: Nine - RSS and Stuff (Update)
 date: 2011-10-05 22:50:00
 category: blog
 ---
 Hello there!
 
-Today, I fixed the [RSS Feed](http://feeds.feedburner.com/timmschoof), so you can subscribe again without messing up your RSS reader. I'm sorry for the inconvenience, a nasty (and, on my part: dumb) syntax error tore it apart. I also changed the blog post's permalinks  and tweaked the metadata below the post titles a little. Now the date doesn't mess up the nice *url.com/post_title* scheme anymore. 
+Today, I fixed the [RSS Feed](http://feeds.feedburner.com/timmschoof), so you can subscribe again without messing up your RSS reader. I'm sorry for the inconvenience, a nasty (and, on my part: dumb) syntax error tore it apart. I also changed the blog post's permalinks  and tweaked the metadata below the post titles a little. <s>Now the date doesn't mess up the nice *url.com/post_title* scheme anymore.</s> Now it does again, I like it better. This way, you have an idea how old a post is by just hovering a link to the post. And blogposts and pages are distinguable. 
 
 There's more to come (content-wise too, for a change), so stay tuned. 
