--- a/_posts/2011-11-02-re-publica-12.md
+++ b/_posts/2011-11-02-re-publica-12.md
@@ -7,6 +7,10 @@ category: tech
 Tickets for the re-publica 2012 are [now available](http://re-publica.de/12). Go.  
 The (I think there were 500? Please correct me.) early bird blogger tickets were sold out in about half an hour. It's that good.
 
-<p style="text-align: center;"><a href="http://re-publica.de/12/" title="Meet me in action @ re:publica 12"><img src="http://re-publica.de/banner/300x250-1.png" alt="re:publica 12" /></a></p>
+<p style="text-align: center;">
+<a href="http://re-publica.de/12/" title="Meet me in action @ re:publica 12"><img src="http://re-publica.de/banner/300x250-1.png" alt="re:publica 12" /></a>
+</p>
 
-<p style="text-align: center;"><a href="http://re-publica.de/12/" title="Meet me in action @ re:publica 12"><img src="http://re-publica.de/banner/300x250-2.png" alt="re:publica 12" /></a></p>
+<p style="text-align: center;">
+<a href="http://re-publica.de/12/" title="Meet me in action @ re:publica 12"><img src="http://re-publica.de/banner/300x250-2.png" alt="re:publica 12" /></a>
+</p>
