--- a/_posts/2011-11-04-quotes-4.md
+++ b/_posts/2011-11-04-quotes-4.md
@@ -12,14 +12,12 @@ Ransone
 > That was cool. Who do we invade now?
 
 Colbert
-> This isn't over Ray. We don't even know what we've started. We may be here all summer long.
+> This isn't over, Ray. We don't even know what we've started. We may be here all summer long.
+
 
 [Generation Kill Pt. VII, 59:08](http://www.imdb.com/title/tt1247757/)  
-Lovell
-> We have to believe things are better now than they were under Saddam. 
- 
 Ryan
-> Whis place was fucked before we got here and it's fucked now. I personally don't believe we liberated the Iraquis. Only time will tell.  
+> This place was fucked before we got here and it's fucked now. I personally don't believe we liberated the Iraquis. Only time will tell.  
 
 Espera
 > I just wish I could go back to that roadblock in Al Hayy. See if those guys I shot in that truck were enemy or just confused. 
