--- a/_posts/2011-11-08-germany.md
+++ b/_posts/2011-11-08-germany.md
@@ -4,7 +4,8 @@ title: Feeling like Hitler...
 date: 2011-11-09 10:00:00
 category: life
 ---
-... in Germany. (30 Rock's Tina Fey aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc))
+... in Germany.  
+(30 Rock's Tina Fey aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc))
 <br>
 <div align="center"><audio controls="controls">  
 <source src="http://dl.dropbox.com/u/7586201/hitler%20in%20germany.mp3" type="audio/mp3" />
