--- a/_posts/2011-11-09-future-tv.md
+++ b/_posts/2011-11-09-future-tv.md
@@ -20,7 +20,7 @@ The screen, obviously. A solution that's 'just' a box like the Apple TV isn't go
 
 What else could it be? AirPlay?  
 I totally agree with Joe Hewitt. He [claims](http://joehewitt.com/2011/10/25/airplay-tv) that the role of AirPlay is underestimated in the current speculation. Like he says, it makes the iPad a console. The iPad 2 and the iPhone 4S's A5 processor is so powerful that it can put out nice graphics in 720p. There's potential there. Since gaming is big on iOS, I'm sure the number of games supporting 720p output instead of just the [standard iOS 5 AirPlay Mirroring](http://www.apple.com/appletv/airplay.html) will grow fast. It's a nice addition and may be totally great for some people, but still - it can't be a main feature for the masses and certainly wasn't what Steve Jobs talked about. It doesn't deliver an Apple TV experience that gets at what [Marco's post](http://www.marco.org/2011/10/23/the-apple-tv-set) makes one aware of:
-        Like many modern geeks, we don’t have cable TV service. Our TV set is merely a monitor for game consoles and media players. We can watch movies and TV shows, but not live — only via iTunes and Netflix.
+> Like many modern geeks, we don’t have cable TV service. Our TV set is merely a monitor for game consoles and media players. We can watch movies and TV shows, but not live — only via iTunes and Netflix.
 
 Ah, yeah. Right. Most people don't watch certain shows they really want to watch. They watch 'TV' instead. Can Apple change the way *how* people watch TV that much? What could they do either to do that or otherwise fit the range of content in iTunes to match people's TV consumption? Or both? 
 
