--- a/_posts/2011-11-09-future-tv.md
+++ b/_posts/2011-11-09-future-tv.md
@@ -5,7 +5,7 @@ date: 2011-11-10 01:00:00
 category: tech
 ---
 There's so much buzz about a hypothetical Apple Television (Set) right now, it's hard to stand. Everyone's over-interpreting this [short statement](http://www.washingtonpost.com/business/technology/jobss-final-plan-an-integrated-apple-tv/2011/10/21/gIQAvhUl3L_story.html) by Steve Jobs. And 'it', whatever it is, is at least half a year away from now, because Apple obviously won't present new products before the Christmas holidays or right after.  
-But it's so much fun to think about how Apple could revolutionize this business branch. Especially this one, because no one would argue that [TV in general isn't broken](http://5by5.tv/hypercritical/1), whether in the US or in Germany. I want to split my hopefully brief comment on this in two sections. Firstly, general speculation about what the heck the new Apple TV Dingus could be or 'just do'. Secondly the ramifications of TV being very different all around the world, especially how TV in Germany from TV in the US.
+But it's so much fun to think about how Apple could revolutionize this business branch. Especially this one, because no one would argue that [TV in general isn't broken](http://5by5.tv/hypercritical/1), whether in the US or in Germany.
 
 ### General Speculation  
 Consensual, in my opinion, is that the new Apple TV Set (I'll just call it that) can't do less than the current Apple TV. Maybe it could do some things differently, but not less. That would be:
@@ -27,7 +27,7 @@ Ah, yeah. Right. Most people don't watch certain shows they really want to watch
 Apple could beef up their content deals big time. Every TV Show you could think of at your fingertips. Just what they did with music. But I think Apple has to do that anyway. That can't be the 'next big thing' in TV, unless Apple reveals a literally overall deal with some neat pricing. But even Apple can't pull that off. Neither for all the old TV Shows and Movies nor for all the current ones.  
 And still: How would Apple present it? What does the future Apple TV solution do when it's being turned on? Just show something? A continuous stream of content? With ads? I'm lost. Of course, Apple has to offer more content. But they can't present it like ordinary TV does, and they can't present it like the Apple TV today does, that wouldn't get any grip in the market. We will be surprised, I guess.
 
-### TV in the US / in Germany  
+### US / Germany  
 We will be surprised I guess, and I mean it. But here in Germany, you'll have to take that with a grain of salt, I think. Everything that involves content, maybe some kind of flatrate and technology in general, just doesn't work here. [Spotify](http://www.spotify.com/int/), YouTube and iTunes Match (as soon as it launches) don't work in Germany like they work in the US, because of overcome rules.  
 For Movies, it's the same. 'Amazon Prime' in Germany doesn't include movie streaming. There's no Germany Netflix. And if there were one, it couldn't show new US TV Shows because of exclusive rights that lie with ABC, AMC, CBS, Showtime or HBO. Content deals, restrictions and borders - it's a mess. To cut a long story short: Even if Apple cranks out a really awesome TV solution, I can't imagine how it could possibly takte the iPhone's spirit to the TV market and revolutionize it outside the US.  
 I hope to be proven wrong. 
