--- a/_posts/2011-11-08-germany.md
+++ b/_posts/2011-11-08-germany.md
@@ -4,7 +4,8 @@ title: You make me feel like Danzig
 date: 2011-11-09 10:00:00
 category: life
 ---
+<p style="text-align: center;">
 <div align="center"><audio controls="controls">  
 <source src="http://dl.dropbox.com/u/7586201/hitler%20in%20germany.mp3" type="audio/mp3" />
 </audio></div>
-<br><small>([30 Rock](http://www.imdb.com/title/tt0496424/)'s [Tina Fey](http://www.imdb.com/name/nm0275486/) aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc))</small>
+<br><small>[30 Rock](http://www.imdb.com/title/tt0496424/)'s [Tina Fey](http://www.imdb.com/name/nm0275486/) aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc)</small></p>
