--- a/_posts/2011-11-08-germany.md
+++ b/_posts/2011-11-08-germany.md
@@ -8,5 +8,4 @@ category: life
 <div align="center"><audio controls="controls">  
 <source src="http://dl.dropbox.com/u/7586201/hitler%20in%20germany.mp3" type="audio/mp3" />
 </audio></div>
-<br>
-[30 Rocks](http://www.imdb.com/title/tt0496424/) [Tina Fey](http://www.imdb.com/name/nm0275486/) aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc)
+<p style="text-align: center;"><small>[30 Rocks](http://www.imdb.com/title/tt0496424/) [Tina Fey](http://www.imdb.com/name/nm0275486/) aka Liz Lemon [on 30 Rock S05E08](http://www.youtube.com/watch?v=X_JDgp_kWcc)</small></p>
