--- a/_posts/2011-11-18-trojan.md
+++ b/_posts/2011-11-18-trojan.md
@@ -7,7 +7,7 @@ published: true
 ---
 I'm gonna tell you a story. A story that didn't take place in a constitutional democracy, obviously. No. It took place in a small country far, far away. We, here in Northern Germany, call it '**Bavaria**'. 
 
-To begin with, you should know that in Germany, the 'LKA' (State Police) isn't allowed to search a suspect's computer. There's no legal basis for that, the BVerfG (Federal Constitutional Court) says. But monitoring a suspect's communication generally is, in context of the [§ 100a StPO](http://dejure.org/gesetze/StPO/100a.html), considered legal. Here's what happened:
+To begin with, you should know that in Germany, the 'LKA' (Police authority of each federal state here in Germany) isn't allowed to search a suspect's computer. There's no legal basis for that, the BVerfG (Federal Constitutional Court) says. But monitoring a suspect's communication generally is, in context of the [§ 100a StPO](http://dejure.org/gesetze/StPO/100a.html), considered legal. Here's what happened:
 
 * The LKA searches permission to monitor a suspect's communication. It is granted by a judge of the Local Court.
 * The LKA installs a Trojan (the famous 'Staatstrojaner') on the suspect's laptop and monitors his communication over Skype, which is allowed. The LKA also takes about 60.000 screenshots, snapping the suspect's browser usage. That's the part there's no legal basis for.
