--- a/_posts/2012-02-23-lte.md
+++ b/_posts/2012-02-23-lte.md
@@ -5,7 +5,7 @@ category: tech
 published: true
 date: 2012-02-23 20:08:00
 ---
-The next iPad might have LTE. It [might be thicker](http://www.theverge.com/2012/2/21/2813466/ipad-3-rumor-casing-a5x) because of the LTE chip and/or the extra battery it needs to [meet this monster's demand for battery](http://gigaom.com/mobile/when-will-lte-stop-sucking-your-battery/). Here in Germany, LTE coverage is nowhere in sight. Some providers (well: their customers) are having problems with 3G coverage in big cities like Hamburg, for example ([Hello, O2](http://wir-sind-einzelfall.de/)). From what I hear in podcasts, coverage in the US is still spotty and relatively poor, although their 4G<sup>1</sup> coverage is at least existent to some degree.  
+The next iPad might have LTE. It [might be thicker](http://www.theverge.com/2012/2/21/2813466/ipad-3-rumor-casing-a5x) because of the LTE chip and/or the extra battery it needs to [meet this monster's demand for battery](http://gigaom.com/mobile/when-will-lte-stop-sucking-your-battery/). Here in Germany, LTE coverage is nowhere in sight. Some providers (well: their customers) are having problems with 3G coverage in big cities like Hamburg, for example ([Hello, O2](http://wir-sind-einzelfall.de/)). From what I hear in podcasts, coverage in the US is still spotty and relatively poor, although their 4G[<sup>1</sup>](#fn1) coverage is at least existent to some degree.  
 But isn't LTE just one of those features that doesn't really do anything (yet) and primarily serves as a differentiator for (oversized) Android devices?
 
 Apple has been conservative about this stuff in the past. I'm not talking about WiFi, of course, but about the original iPhone without 3G (Gosh, the original iPhone was announced *five* years ago). Because of that, people made fun of it at the time. Obviously, the constraints were the same as today: Mobile data eats up battery. So: Would Apple release a new iPad with less battery life, or one with bigger battery (and a thicker body)? Both alternatives seem unlikely to me. 
@@ -16,4 +16,4 @@ One has to think Europe would have to get on board completely to provide coverag
 Well, the Wall Street Journal [reports otherwise](http://online.wsj.com/article/SB10001424052970204062704577221960347109978.html), but I still wanted to make this point. 
 
 ---
-1. I've heard one could argue about the terminology here, 'LTE' vs. '4G'. Let's not do that.
+<span id="fn1">1. I've heard one could argue about the terminology here, 'LTE' vs. '4G'. Let's not do that.</span>
