--- a/_posts/2012-02-23-lte.md
+++ b/_posts/2012-02-23-lte.md
@@ -17,5 +17,7 @@ Well, the Wall Street Journal [reports otherwise](http://online.wsj.com/article/
 <div class="instapaper_ignore">
 
 ---
-<span id="fn1">1. I've heard one could argue about the terminology here, 'LTE' vs. '4G'. Let's not do that.</span> [&#8613;](#fn1b)
+
+<span id="fn1">
+1. I've heard one could argue about the terminology here, 'LTE' vs. '4G'. Let's not do that.</span> [&#8613;](#fn1b)
 </div>
