--- a/_posts/2012-03-02-ue-1.md
+++ b/_posts/2012-03-02-ue-1.md
@@ -11,4 +11,4 @@ I'll dedicate a blogpost to every new episode and its contents, but on the sideb
 If you're already sold and wanna feed a feed to your podcasting app: [Audio RSS feed](http://feeds.feedburner.com/ungeheuerlich_eschoofierend).  
 If you prefer listening to podcasts via iTunes: [This way](http://itunes.apple.com/de/podcast/ungeheuerlich-eschoofierend/id507224771?l=en). You can also leave us a rating or a review there, we'd love that.
 
-In this [first episode](http://www.buzzsprout.com/5450/42499-ist-das-irgendwas-auf-servern.mp3), we talk about iMessage, some iPhone history, accents and our nonexistent knowledge about newsgroups, usenet and the early days of the Internet in general. Enjoy!
+In the [first episode](http://www.buzzsprout.com/5450/42499-ist-das-irgendwas-auf-servern.mp3), we talk about iMessage, some iPhone history, accents and our nonexistent knowledge about newsgroups, usenet and the early days of the Internet in general. Enjoy!
