--- a/_posts/2012-05-12-circle.md
+++ b/_posts/2012-05-12-circle.md
@@ -5,6 +5,18 @@ date: 2012-05-12 15:07:00
 category: tech
 published: true
 ---
+*Circle's CEO Evan originally wrote, er, a  mail that was automatically sent after I downloaded the App contained the following text:*
+
+> Hi Timm,  
+>I am a Co-Founder and CEO of Circle and I noticed that you downloaded our app today.
+> 
+> I wanted to reach out and thank you for trying it and see how your initial experience was. We made Circle to help people know when their friends and networks are nearby and we hope that you find it useful!
+> 
+> We are just getting started (you’re one of the first to check it out!) and I’d greatly appreciate any ideas on how we can improve or any problems that you run into and we will fix them fast! Below is my personal email and cell phone. Feel free to reach out 24/7 with any ideas or just to say hi. Thanks again and I hope to chat sometime in Circle - I am always at the end of your “Networks” in the app.
+> 
+> Cheers,  
+> Evan
+
 Hi Evan,
 
 It's very kind of you to reach out to me. I want to let you know that I removed Circle from my device and deleted it in Facebook after playing with it for a few minutes.
@@ -23,14 +35,4 @@ I hoped that your app offers kind of a better Foursquare radar (maybe including 
 Regards,  
 Timm
 
-*Evan originally wrote, er, a  mail that was automatically sent after I downloaded the App contained the following text:*
 
-> Hi Timm,  
->I am a Co-Founder and CEO of Circle and I noticed that you downloaded our app today.
-> 
-> I wanted to reach out and thank you for trying it and see how your initial experience was. We made Circle to help people know when their friends and networks are nearby and we hope that you find it useful!
-> 
-> We are just getting started (you’re one of the first to check it out!) and I’d greatly appreciate any ideas on how we can improve or any problems that you run into and we will fix them fast! Below is my personal email and cell phone. Feel free to reach out 24/7 with any ideas or just to say hi. Thanks again and I hope to chat sometime in Circle - I am always at the end of your “Networks” in the app.
-> 
-> Cheers,  
-> Evan
