--- a/_posts/2012-06-22-pro-air.md
+++ b/_posts/2012-06-22-pro-air.md
@@ -20,3 +20,5 @@ Everything coming down to: The new 'MacBook Pro with Retina Display' (bad name, 
 **Update**: Oh, Andy Ihnatko makes the same point in [his review](http://www.suntimes.com/technology/ihnatko/13192283-452/retina-macbook-is-apples-best-but-could-be-better.html):
 
 > But is it this the best MacBook for everybody? Oh, dear, no. Apple clearly and consistently refers to the Retina MacBook as a next-generation, future-forward product. It doesn’t replace the conventional 15-inch MacBook Pro in Apple’s product line.
+
+**Update 2**: Similar thoughts [over on MacWorld](http://www.macworld.com/article/1167286/macbook_pro_with_retina_display_redefines_the_concept_of_a_pro_laptop.html), via [512pixels.net](http://512pixels.net/redefining-pro/)
