--- a/_posts/2012-06-22-pro-air.md
+++ b/_posts/2012-06-22-pro-air.md
@@ -22,3 +22,7 @@ Everything coming down to: The new 'MacBook Pro with Retina Display' (bad name, 
 > But is it this the best MacBook for everybody? Oh, dear, no. Apple clearly and consistently refers to the Retina MacBook as a next-generation, future-forward product. It doesn’t replace the conventional 15-inch MacBook Pro in Apple’s product line.
 
 **Update 2**: Similar thoughts [over on MacWorld](http://www.macworld.com/article/1167286/macbook_pro_with_retina_display_redefines_the_concept_of_a_pro_laptop.html), via [512pixels.net](http://512pixels.net/redefining-pro/)
+
+**Update 3**: Anandtech [thinks were at a crossroad](http://www.anandtech.com/show/6023/the-nextgen-macbook-pro-with-retina-display-review). I agree.
+
+> The personal computer is getting thinner, lighter, more integrated and more appliance-like. The movement is no longer confined to just Apple either. The traditional PC OEMs are following suit. Even Microsoft has finally entered the PC hardware business, something it threatened to do for years but hadn't until now. Distribution models will change, the lines between different form factors will continue to blur. What was once a mature industry is going through a significant transformation. It’s exciting but at the same time it makes me uneasy. When I first got into this industry everyone had stories of companies with great ideas that just didn’t make it. As we go through this revolution in computing I’m beginning to see, first hand, the very same.
