--- a/_posts/2012-06-22-pro-air.md
+++ b/_posts/2012-06-22-pro-air.md
@@ -27,4 +27,4 @@ Everything coming down to: The new 'MacBook Pro with Retina Display' (bad name, 
 
 > The personal computer is getting thinner, lighter, more integrated and more appliance-like. The movement is no longer confined to just Apple either. The traditional PC OEMs are following suit. Even Microsoft has finally entered the PC hardware business, something it threatened to do for years but hadn't until now. Distribution models will change, the lines between different form factors will continue to blur. What was once a mature industry is going through a significant transformation. It’s exciting but at the same time it makes me uneasy. When I first got into this industry everyone had stories of companies with great ideas that just didn’t make it. As we go through this revolution in computing I’m beginning to see, first hand, the very same.
 
-Test.
+Test. <- Commited with the GitHub App for Mac OS X. n_n.
