--- a/_posts/2012-07-13-dear-xy.md
+++ b/_posts/2012-07-13-dear-xy.md
@@ -24,7 +24,7 @@ please go out of business already.
 Dear Bose guys,  
 base doesn't equal sound quality.
 
-Dear Skype-Guys (at Microsoft),  
+Dear Skype guys (at Microsoft),  
 please update that ringtone.
 
 Dear Balzac and Starbucks Coffee guys,  
