--- a/_posts/2012-07-13-dear-xy.md
+++ b/_posts/2012-07-13-dear-xy.md
@@ -22,7 +22,7 @@ Dear RIM,
 please go out of business already.
 
 Dear Bose guys,  
-base doesn't equal sound quality.
+bass doesn't equal sound quality.
 
 Dear Skype guys (at Microsoft),  
 please update that ringtone.
