--- a/_posts/2012-07-13-dear-xy.md
+++ b/_posts/2012-07-13-dear-xy.md
@@ -28,7 +28,7 @@ Dear Skype guys (at Microsoft),
 please update that ringtone.
 
 Dear Balzac and Starbucks Coffee guys,  
-I think the smallest cup of coffee you offer is a actually pretty much coffee.
+I think the smallest cup of coffee you offer is actually a great quantity of coffee.
 
 Best,  
 Timm
