--- a/_posts/2012-09-24-girls.md
+++ b/_posts/2012-09-24-girls.md
@@ -12,4 +12,4 @@ Watching it, my facial expression often times completely derailed out of astonis
 
 'Girls' has extreme characters, but doesn't let them clash onto each other for big laughs. Instead they develop in a very real way, so that you get a good feeling for them. That doesn't mean you don't laugh watching 'Girls', you do! But there aren't gags that the moment builds up to, the humor is more contained in situations as a whole. Sometimes it's some character's fabulous monologues in which they express how they see the world. Hilarious.
 
-I also like the way how it's shot. Beautiful pictures. HBO did good, letting Lena Dunham do her thing. 
+I also like the way how it's shot. Beautiful pictures. HBO did good by letting Lena Dunham do her thing. 
