--- a/_posts/2012-09-24-girls.md
+++ b/_posts/2012-09-24-girls.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Girls
+title: &#34;Girls&#34;
 date: 2012-09-24 21:01:46
 category: movies and television
 published: true
