--- a/_posts/2012-12-11-Mustang.md
+++ b/_posts/2012-12-11-Mustang.md
@@ -6,8 +6,7 @@ category: life
 published: true
 ---
 
-You better plug your nice headphones in for this. Just nice.
-
+You better plug your nice headphones in for this. Just nice.<br>
 <iframe src="http://player.vimeo.com/video/54510052?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="670" height="377" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 via  [Shawn Blanc](http://shawnblanc.net/2012/12/the-real-thing/) via [Cameron Moll](https://twitter.com/cameronmoll/status/275705793809104897) 
