--- a/_posts/2012-12-27-Jobs-Gates-D5-2007.md
+++ b/_posts/2012-12-27-Jobs-Gates-D5-2007.md
@@ -7,5 +7,5 @@ published: true
 ---
 
 Very interesting to see this video nowadays. It was 2007, the iPhone had been announced. The iPad (early 2010) was only on the horizon, and Apple was – despite already having success with the iPod – nowhere near as big as today.  
-All the ‘post-PC device’ talk and ‘great stuff coming’ had the iPad written all over it.<br>
+All the ‘post-PC device’ talk and ‘great stuff coming’ had the iPad written all over it.<br><br>
 <iframe width="620" height="465" src="https://www.youtube-nocookie.com/embed/ZWaX1g_2SSQ?rel=0" frameborder="0" allowfullscreen></iframe>
