--- a/_posts/2012-12-11-Mustang.md
+++ b/_posts/2012-12-11-Mustang.md
@@ -7,6 +7,6 @@ published: true
 ---
 
 You better plug your nice headphones in for this. Just nice.<br><br>
-<iframe src="http://player.vimeo.com/video/54510052?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="670" height="377" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<p style="text-align: center;"> <iframe src="http://player.vimeo.com/video/54510052?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="670" height="377" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></p>
 
 via  [Shawn Blanc](http://shawnblanc.net/2012/12/the-real-thing/) via [Cameron Moll](https://twitter.com/cameronmoll/status/275705793809104897) 
